--- a/SangueAmigo2/SangueAmigo2/src/main/java/view/UsuarioCadastro.form
+++ b/SangueAmigo2/SangueAmigo2/src/main/java/view/UsuarioCadastro.form
@@ -267,6 +267,9 @@
           </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="tx1">
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="tx1ActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="tx2">
           <Events>
