--- a/SangueAmigo2 (2)/SangueAmigo2 (2)/SangueAmigo2/SangueAmigo2/src/main/java/view/UsuarioDoacao.form
+++ b/SangueAmigo2 (2)/SangueAmigo2 (2)/SangueAmigo2/SangueAmigo2/src/main/java/view/UsuarioDoacao.form
@@ -100,20 +100,15 @@
                               <Component id="tx12" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="lblLocalD" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
+                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Group type="102" alignment="0" attributes="0">
-                                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                                  <Group type="103" groupAlignment="3" attributes="0">
-                                      <Component id="tx13" alignment="3" min="-2" max="-2" attributes="0"/>
-                                      <Component id="lblDataD" alignment="3" min="-2" max="-2" attributes="0"/>
-                                  </Group>
+                              <Group type="103" alignment="0" groupAlignment="3" attributes="0">
+                                  <Component id="tx13" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="lblDataD" alignment="3" min="-2" max="-2" attributes="0"/>
                               </Group>
-                              <Group type="102" alignment="0" attributes="0">
-                                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                                  <Group type="103" groupAlignment="3" attributes="0">
-                                      <Component id="tx14" alignment="3" min="-2" max="-2" attributes="0"/>
-                                      <Component id="lblHoraD" alignment="3" min="-2" max="-2" attributes="0"/>
-                                  </Group>
+                              <Group type="103" alignment="0" groupAlignment="3" attributes="0">
+                                  <Component id="tx14" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="lblHoraD" alignment="3" min="-2" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
