--- a/SangueAmigo2/src/main/java/view/UsuarioCadastro.form
+++ b/SangueAmigo2/src/main/java/view/UsuarioCadastro.form
@@ -123,12 +123,12 @@
                                   <Group type="102" alignment="1" attributes="0">
                                       <Component id="lblDNascimento" min="-2" max="-2" attributes="0"/>
                                       <EmptySpace max="-2" attributes="0"/>
-                                      <Component id="tx5" max="32767" attributes="0"/>
+                                      <Component id="tx5" pref="179" max="32767" attributes="0"/>
                                   </Group>
                                   <Group type="102" attributes="0">
                                       <Component id="lblSenha" min="-2" max="-2" attributes="0"/>
-                                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                                      <Component id="tx4" min="-2" pref="256" max="-2" attributes="0"/>
+                                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                                      <Component id="tx4" max="32767" attributes="0"/>
                                   </Group>
                               </Group>
                           </Group>
@@ -166,8 +166,8 @@
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="tx4" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="lblSenha" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="tx4" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
@@ -281,8 +281,6 @@
         </Component>
         <Component class="javax.swing.JTextField" name="tx3">
         </Component>
-        <Component class="javax.swing.JTextField" name="tx4">
-        </Component>
         <Component class="javax.swing.JTextField" name="tx5">
         </Component>
         <Component class="javax.swing.JTextField" name="tx7">
@@ -340,6 +338,8 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Tipo sangu&#xed;neo:"/>
           </Properties>
+        </Component>
+        <Component class="javax.swing.JPasswordField" name="tx4">
         </Component>
       </SubComponents>
     </Container>
